created some endpoints for user
