# backend/server.js
@@ -1,7 +1,7 @@
 const express = require("express");
 const app = express();
-//import { getUserList ,findUserById } from "./user";
-//const userList = getUserList(); // assume for now this is your database
+//const client = require('./db/database');
+const database =  require('./service.js');
 
 // Swagger API
 const swaggerUi = require('swagger-ui-express'),
@@ -11,117 +11,30 @@ swaggerDocument = require('./swagger.json');
 app.get('/', (req, res) => res.redirect('/docs'));
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-// GET Call for all users
-app.get("/users", (req, res) => {
-  return res.status(200).send({
-    success: "true",
-    message: "users",
-    users: userList,
-  });
-});
+/***************************************************************
+                       Auth Functions
+***************************************************************/
 
-//  POST call - Means you are adding new user into database 
+app.post('/auth/login');
 
-app.post("/addUser", (req, res) => {
+app.post('/auth/logout');
 
-  if (!req.body.name) {
-    return res.status(400).send({
-      success: "false",
-      message: "name is required",
-    });
-  } else if (!req.body.companies) {
-    return res.status(400).send({
-      success: "false",
-      message: "companies is required",
-    });
-  }
-  const user = {
-    id: userList.length + 1,
-    isPublic: req.body.isPublic,
-    name:  req.body.name,
-    companies: req.body.companies,
-    books:  req.body.books
-  };
-  userList.push(user);
-  return res.status(201).send({
-    success: "true",
-    message: "user added successfully",
-    user,
-  });
-});
+/***************************************************************
+                       User Functions
+***************************************************************/
 
-//  PUt call - Means you are updating new user into database 
+app.get('/user/:userId', database.getUser);
 
-app.put("/updateUser/:id", (req, res) => {
-  const id = parseInt(req.params.id, 10);
-  const userFound=findUserById(id)
+app.put('/user/:userId', database.putUserAdmin);
 
-  if (!userFound) {
-    return res.status(404).send({
-      success: 'false',
-      message: 'user not found',
-    });
-  }
+app.delete('/user/:userId', database.deleteUser);
 
-  const updatedUser= {
-      id: id,
-      isPublic: req.body.isPublic || userFound.body.isPublic,
-      name:req.body.name || userFound.body.name,
-      companies: req.body.companies || userFound.body.companies,
-      books: req.body.books || userFound.body.books
-   
-  };
+/***************************************************************
+                       Topic Group Functions
+***************************************************************/
 
-  if (!updatedUser.name) {
-    return res.status(400).send({
-      success: "false",
-      message: "name is required",
-    });
-  } else if (!updatedUser.companies) {
-    return res.status(400).send({
-      success: "false",
-      message: "companies is required",
-    });
-  }
-
-  for (let i = 0; i < userList.length; i++) {
-      if (userList[i].id === id) {
-          userList[i] = updatedUser;
-          return res.status(201).send({
-            success: 'true',
-            message: 'user updated successfully',
-            updatedUser
-          
-          });
-      }
-  }
-  return  res.status(404).send({
-            success: 'true',
-            message: 'error in update'
-           
-     });
-})
-
-//  Delete call - Means you are deleting new user from database 
-
-app.delete("/deleteUser/:id", (req, res) => {
-  const id = parseInt(req.params.id, 10);
-  for(let i = 0; i < userList.length; i++){
-      if(userList[i].id === id){
-           userList.splice(i,1);
-           return res.status(201).send({
-            success: 'true',
-            message: 'user deleted successfully'
-          });
-      }
-  }
-  return res.status(404).send({
-              success: 'true',
-              message: 'error in delete'   
-    });
-})
 
 
 app.listen(8000, () => {
-  console.log("server listening on port 8000!");
+  console.log("Server listening on http://localhost:8000/");
 });
