# backend/swagger.json
@@ -1105,7 +1105,7 @@
         }
       }
     },
-    "/user/{$userId}": {
+    "/user/{userId}": {
       "get": {
         "tags": ["User"],
         "summary": "Get user from id",
@@ -1115,7 +1115,7 @@
             "in": "path",
             "required": true,
             "description": "Id of user we want",
-            "type": "string"
+            "type": "integer"
           }
         ],
         "responses": {
@@ -1146,14 +1146,7 @@
             "in": "path",
             "required": true,
             "description": "Id of user we want to make an admin",
-            "type": "string"
-          },
-          {
-            "name": "newAdmin",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
+            "type": "integer"
           }
         ],
         "responses": {
@@ -1184,7 +1177,7 @@
             "in": "path",
             "required": true,
             "description": "Id of user we want",
-            "type": "string"
+            "type": "integer"
           }
         ],
         "responses": {
